# zeiss-code-challenge-mle-project

./: .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  README.md  app.py  config.yml  docker-compose.yml  model.html  model.ipynb  pyproject.toml  requirements.txt  run.py  run_app.py
data/: predictions.csv  preprocessed_data.npz
src/main/: predict.py  prepare_data.py  train.py  visualize.py
src/utils/: load_config.py  load_data.py
