[tool.poetry]
name = "ML Productionized App"
version = "0.1.0"
description = "A FastAPI project for ML services (data preparation, training, and prediction)"
authors = ["taylorkkxiaodi.liu@gmail.com"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "3.9.13"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
numpy = "^1.24.0"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
joblib = "^1.3.1"
boto3 = "^1.26.0"
pydantic = "^2.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pylint = "^2.14.0"
mypy = "^1.1.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pylint]

[tool.mypy]
python_version = "3.9.13"
warn_unused_configs = true
ignore_missing_imports = true
strict = true
